@@ -1,3 +1,7 @@
+2009-02-14 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add support for environment variable VOIKKO_DICTIONARY.
+
 2009-01-31 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add option -d to all test tools.
